ajustes nested methods

--- a/app/views/allergies/_form.html.erb
+++ b/app/views/allergies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@allergy) do |f| %>
+<%= form_for [@user ,@allergy] do |f| %>
   <% if @allergy.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@allergy.errors.count, "error") %> prohibited this allergy from being saved:</h2>
