--- a/app/views/allergies/edit.html.erb
+++ b/app/views/allergies/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @allergy %> |
-<%= link_to 'Back', allergies_path %>
+<%= link_to 'Back', user_allergies_path %>
