--- a/app/views/diseases/edit.html.erb
+++ b/app/views/diseases/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @disease %> |
-<%= link_to 'Back', diseases_path %>
+<%= link_to 'Back', user_diseases_path %>
