--- a/app/views/allergies/index.html.erb
+++ b/app/views/allergies/index.html.erb
@@ -13,10 +13,10 @@
     <% @allergies.each do |allergy| %>
       <tr>
         <td><%= allergy.name %></td>
-        <td><%= allergy.user %></td>
-        <td><%= link_to 'Show', allergy %></td>
-        <td><%= link_to 'Edit', edit_allergy_path(allergy) %></td>
-        <td><%= link_to 'Destroy', allergy, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= allergy.user_id %></td>
+        <td><%= link_to 'Show', user_allergy_path(allergy.user_id, allergy) %></td>
+        <td><%= link_to 'Edit', edit_user_allergy_path(allergy.user_id, allergy) %></td>
+        <td><%= link_to 'Destroy', user_allergy_path(allergy.user_id, allergy), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Allergy', new_allergy_path %>
+<%= link_to 'New Allergy', new_user_allergy_path %>
