--- a/app/views/diseases/_form.html.erb
+++ b/app/views/diseases/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@disease) do |f| %>
+<%= form_for [@user ,@disease] do |f| %>
   <% if @disease.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@disease.errors.count, "error") %> prohibited this disease from being saved:</h2>
