--- a/app/views/remedies/edit.html.erb
+++ b/app/views/remedies/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @remedy %> |
-<%= link_to 'Back', remedies_path %>
+<%= link_to 'Back', user_remedies_path %>
