--- a/app/views/remedies/index.html.erb
+++ b/app/views/remedies/index.html.erb
@@ -15,10 +15,10 @@
       <tr>
         <td><%= remedy.quantidade %></td>
         <td><%= remedy.name %></td>
-        <td><%= remedy.user %></td>
-        <td><%= link_to 'Show', remedy %></td>
-        <td><%= link_to 'Edit', edit_remedy_path(remedy) %></td>
-        <td><%= link_to 'Destroy', remedy, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= remedy.user_id %></td>
+        <td><%= link_to 'Show', user_remedy_path(remedy.user_id, remedy) %></td>
+        <td><%= link_to 'Edit', edit_user_remedy_path(remedy.user_id, remedy) %></td>
+        <td><%= link_to 'Destroy', user_remedy_path(remedy.user_id, remedy), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Remedy', new_remedy_path %>
+<%= link_to 'New Remedy', new_user_remedy_path %>
